[package]
name = "starstuff-types"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A simple star catalog parser and primitive types for star coordinates and astronomical times."
homepage = "https://github.com/maxb2/starstuff-types"
repository = "https://github.com/maxb2/starstuff-types"
readme = "README.md"
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
auto_ops = "0.3"
assert_float_eq = "1"
